fix - fixing the overscroll problem on tablet and mobile devices

--- a/src/scss/base/_util.scss
+++ b/src/scss/base/_util.scss
@@ -49,7 +49,7 @@
 
    @include breakpoint-up('tiny') {
 
-      overflow: scroll;
+      overflow: none;
    }
 }
 
